--- a/collectd-influx-grafana/conf/collectd/collectd.conf
+++ b/collectd-influx-grafana/conf/collectd/collectd.conf
@@ -1,4 +1,4 @@
-Interval     120
+Interval     20
 LoadPlugin syslog
 LoadPlugin cpu
 LoadPlugin memory
@@ -40,7 +40,7 @@ LoadPlugin df
  <Node "docker-compose">
 	Host "db"
 	Port "2003"
-	Protocol "tcp"
+	Protocol "udp"
 	ReconnectInterval 0
     LogSendErrors true
     Prefix "collectd"
