--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -14,6 +14,7 @@ services:
    - "traefik.enable=true"
    - "traefik.port=8080"
    - "traefik.frontend.rule=Host:traefik.localhost,traefik.potato.kinf.wiai.uni-bamberg.de"
+  restart: on-failure:5
 networks:
  net:
   driver: bridge
